--- a/Sina/Sina/Classes/Resource/MainVCSettings.json
+++ b/Sina/Sina/Classes/Resource/MainVCSettings.json
@@ -1,11 +1,11 @@
 [
  {
-    "vcName": "HomeTableViewController",
+    "vcName": "TBHomeController",
     "title": "首页",
     "imageName": "tabbar_home"
  },
  {
-     "vcName": "MessageTableViewController",
+     "vcName": "TBMessageController",
      "title": "消息",
      "imageName": "tabbar_message_center"
  },
@@ -17,12 +17,12 @@
  
  },
  {
-     "vcName": "DiscoverTableViewController",
+     "vcName": "TBDiscoverController",
      "title": "广场",
      "imageName": "tabbar_discover"
  },
  {
-     "vcName": "ProfileTableViewController",
+     "vcName": "TBProfileController",
      "title": "我",
      "imageName": "tabbar_profile"
  }
